# onton

./: .coderabbit.yaml  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  dune  dune-project  dune-workspace  gameplan-4.md  gameplan.md  onton.opam  package-lock.json  package.json  tsconfig.json  vercel.json
.claude/: .claude  hooks.json
.github/workflows/: ci.yml  pr-claude-review.yml  release.yml
.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
.wrangler/state/v3/r2/miniflare-R2BucketObject/: metadata.sqlite-shm  metadata.sqlite-wal
Formula/: onton.rb  onton.rb.template
api/: upload.ts
docs/: execution.html  gameplan.html  index.html  workstream.html
docs/assets/: app.js  components.js  styles.css
docs/design/: patch-agent-prompting.md  workstream-prompting.md
gameplans/: gameplan-2.md  gameplan-3.md  gameplan-4.md  gameplan-5.md
lib/: activity_log.ml  activity_log.mli  activity_log_sink.ml  activity_log_sink.mli  backend_preflight.ml  backend_registry.ml  backend_registry.mli  backend_routing.ml  backend_routing.mli  claude_backend.ml  claude_backend.mli  claude_process.ml  claude_process.mli  claude_runner.ml  claude_runner.mli  codex_backend.ml  codex_backend.mli  codex_cost.ml  codex_cost.mli  comment_responder.ml  comment_responder.mli  completions.ml  completions.mli  debug_upload.ml  debug_upload.mli  dummy_ci_test.ml  dune  event_log.ml  event_log.mli  findings_registry.ml  findings_registry.mli  findings_resolver.ml  findings_resolver.mli  forge.ml  forge.mli  gameplan_lint.ml  gameplan_lint.mli  gameplan_parser.ml  gameplan_parser.mli  gemini_backend.ml  (+134 more)
lib_core/: activity_log.ml  activity_log.mli  anchor.ml  anchor.mli  anchor_history.ml  anchor_history.mli  automerge_state.ml  automerge_state.mli  backend_routing.ml  backend_routing.mli  base_containment.ml  base_containment.mli  ci_log_digest.ml  ci_log_digest.mli  claude_event_parser.ml  claude_process.ml  claude_process.mli  codex_cost.ml  codex_cost.mli  codex_event_parser.ml  comment_responses.ml  comment_responses.mli  content_gate.ml  content_gate.mli  display_status.ml  dune  failure_subkind.ml  failure_subkind.mli  gameplan_parser.ml  gameplan_parser.mli  gemini_event_parser.ml  github_target.ml  github_target.mli  graph.ml  graph.mli  invariants.ml  invariants.mli  json.ml  json.mli  merge_queue_decision.ml  (+69 more)
lib_test/: dune  git_env.ml  git_env.mli  test_generators.ml
scripts/: check-no-raw-yojson.sh  install-hooks.sh  sync-skills.sh  yojson-util-allowlist.txt
skills/create-gameplan-v2/: SKILL.md
skills/create-gameplan-v2/references/: example.json  gameplan-schema.json
skills/create-workstream/: SKILL.md
skills/write-gameplan/: SKILL.md
skills/write-gameplan/agents/: openai.yaml
skills/write-gameplan/references/: example.json  gameplan-schema.json
skills/write-gameplan/scripts/: validate.py
skills/write-workstream/: SKILL.md
skills/write-workstream/agents/: openai.yaml
skills/write-workstream/references/: workstream-format.md
spec/: anton.pant
test/: dune  test_action_outcome_properties.ml  test_activity_log_properties.ml  test_anchor.ml  test_anchor_history_properties.ml  test_anchor_state_properties.ml  test_automerge_deadline_properties.ml  test_automerge_state_properties.ml  test_backend_event_parser_properties.ml  test_backend_parser_totality.ml  test_backend_routing.ml  test_backend_smoke.ml  test_base_containment.ml  test_ci_log_digest_properties.ml  test_claude_backend_properties.ml  test_claude_process_properties.ml  test_codex_cost_properties.ml  test_comment_responses_properties.ml  test_conflict_recovery_state_machine.ml  test_content_gate_properties.ml  test_debug_upload.ml  test_dependency_injection_functors.ml  test_display_status_properties.ml  test_failure_subkind_properties.ml  test_fanin_liveness_interleavings.ml  test_gameplan_add_patch_properties.ml  test_gemini_event_parser_properties.ml  test_git_env.ml  test_github_check_details.ml  test_github_merge_commit_null.ml  test_github_merge_queue_removal.ml  test_github_target_properties.ml  test_graph_properties.ml  test_interleaving_properties.ml  test_intervention_reason.ml  test_invariants_properties.ml  test_json.ml  test_merge_queue_decision_properties.ml  test_misc_pure_properties.ml  test_oauth_scopes_properties.ml  (+65 more)
test/fixtures/patch_agent_integration/: gameplan.md  patch.md
tools/ts2pant/tests/: ir1-ssa-contract.test.mts
