opam-version: "2.0"
name: "onton"
version: "0.1.0"
synopsis: "OCaml orchestrator for parallel Claude Code agents"
maintainer: ["flowglad"]
depends: [
  "ocaml" {>= "5.4.0"}
  "dune" {>= "3.21"}
  "base" {>= "v0.17.0"}
  "eio" {>= "1.3"}
  "eio_main" {>= "1.3"}
  "yojson" {>= "3.0.0"}
  "cohttp-eio" {>= "6.0.0"}
  "tls-eio" {>= "2.0.0"}
  "mirage-crypto-rng" {>= "2.0.0"}
  "ca-certs" {>= "1.0.0"}
  "cmdliner" {>= "1.3.0"}
  "ppx_deriving" {>= "6.0"}
  "ppx_sexp_conv" {>= "v0.17.0"}
  "ppx_compare" {>= "v0.17.0"}
  "ppx_hash" {>= "v0.17.0"}
  "ppx_expect" {with-test & >= "v0.17.0"}
  "ppx_inline_test" {with-test & >= "v0.17.0"}
  "ppx_assert" {with-test & >= "v0.17.0"}
  "qcheck-core" {with-test & >= "0.21"}
  "ocamlformat" {with-dev-setup & = "0.28.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
