(library
 (name onton)
 (libraries base eio eio_main yojson)
 (inline_tests)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42))
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord
                  ppx_sexp_conv ppx_compare ppx_hash
                  ppx_expect ppx_inline_test ppx_assert)))
