(library
 (name onton)
 (modules :standard)
 (libraries onton_core base unix eio eio_main eio.unix yojson ppx_yojson_conv_lib cohttp-eio tls-eio mirage-crypto-rng.unix mirage-crypto-pk x509 base64 ca-certs cmarkit)
 (flags (:standard -open Onton_core))
 (foreign_stubs
  (language c)
  (names rlimit_stubs))
 (inline_tests)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42))
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord
                  ppx_sexp_conv ppx_compare ppx_hash
                  ppx_yojson_conv
                  ppx_expect ppx_inline_test ppx_assert)))
