(test
 (name test_onton)
 (libraries onton))

(test
 (name test_patch_agent)
 (libraries onton qcheck-core))

(test
 (name test_properties)
 (libraries onton onton_test_support qcheck-core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_reconciler_properties)
 (libraries onton onton_test_support qcheck-core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_orchestrator_properties)
 (libraries onton onton_test_support qcheck-core))

(test
 (name test_state_machine_properties)
 (libraries onton onton_test_support qcheck-core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_tui_input)
 (libraries onton))

(test
 (name test_stream_parser)
 (libraries onton qcheck-core))

(test
 (name test_persistence_properties)
 (libraries onton onton_test_support qcheck-core qcheck-core.runner yojson)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_runtime_create)
 (libraries onton))

(test
 (name test_poller_properties)
 (libraries onton onton_test_support qcheck-core))

(test
 (name test_tui_scheduling)
 (libraries onton eio eio_main eio.unix unix))

(test
 (name test_patch_decision)
 (libraries onton qcheck-core))

(test
 (name test_spawn_logic)
 (libraries onton onton_test_support qcheck-core))

(test
 (name test_worktree_parser)
 (libraries onton qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_rebase_onto)
 (libraries onton qcheck-core qcheck-core.runner eio eio_main eio.unix)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_startup_reconciler)
 (libraries onton onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_run_classification)
 (libraries onton onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_patch_controller)
 (libraries onton onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_patch_controller_state_machine)
 (libraries onton onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))
