(test
 (name test_onton)
 (modules test_onton)
 (libraries onton onton_core))

(test
 (name test_automerge_deadline_properties)
 (modules test_automerge_deadline_properties)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_github_merge_commit_null)
 (modules test_github_merge_commit_null)
 (libraries onton onton_core yojson))

(test
 (name test_json)
 (modules test_json)
 (libraries onton_core base yojson ppx_yojson_conv_lib))

(test
 (name test_patch_agent)
 (modules test_patch_agent)
 (libraries onton onton_core qcheck-core))

(test
 (name test_patch_agent_rpc)
 (modules test_patch_agent_rpc)
 (libraries onton_core qcheck-core qcheck-core.runner yojson)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_patch_agent_event_mapper)
 (modules test_patch_agent_event_mapper)
 (libraries onton onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_patch_agent_backend_integration)
 (modules test_patch_agent_backend_integration)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner
   eio eio_main eio.unix unix)
 (deps
  fixtures/patch_agent_integration/gameplan.md
  fixtures/patch_agent_integration/patch.md)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_codex_cost_properties)
 (modules test_codex_cost_properties)
 (libraries onton_core qcheck-core qcheck-core.runner yojson)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_supervisor_decision_properties)
 (modules test_supervisor_decision_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_supervisor_guard)
 (modules test_supervisor_guard)
 (libraries onton onton_core eio eio_main)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_term_key_io)
 (modules test_term_key_io)
 (libraries onton eio_main unix)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_github_target_properties)
 (modules test_github_target_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_push_reject_classify_properties)
 (modules test_push_reject_classify_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_start_point_plan_properties)
 (modules test_start_point_plan_properties)
 (libraries onton_core re qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_start_eligibility_properties)
 (modules test_start_eligibility_properties)
 (libraries onton_core re qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_base_containment)
 (modules test_base_containment)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_push_plan_properties)
 (modules test_push_plan_properties)
 (libraries onton_core re qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_rebase_decision_properties)
 (modules test_rebase_decision_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_anchor)
 (modules test_anchor)
 (libraries onton_core qcheck-core qcheck-core.runner yojson)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_anchor_state_properties)
 (modules test_anchor_state_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_anchor_history_properties)
 (modules test_anchor_history_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_claude_process_properties)
 (modules test_claude_process_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_content_gate_properties)
 (modules test_content_gate_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_graph_properties)
 (modules test_graph_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_invariants_properties)
 (modules test_invariants_properties)
 (libraries onton_core qcheck-core)
 (ocamlopt_flags (:standard -w -40-42-4))
 (ocamlc_flags (:standard -w -40-42-4)))

(test
 (name test_state_properties)
 (modules test_state_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_pr_state_properties)
 (modules test_pr_state_properties)
 (libraries onton_core qcheck-core)
 (ocamlopt_flags (:standard -w -40-42-4))
 (ocamlc_flags (:standard -w -40-42-4)))

(test
 (name test_token_scrub_properties)
 (modules test_token_scrub_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_backend_event_parser_properties)
 (modules test_backend_event_parser_properties)
 (libraries onton_core qcheck-core yojson))

(test
 (name test_gemini_event_parser_properties)
 (modules test_gemini_event_parser_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_opencode_event_parser_properties)
 (modules test_opencode_event_parser_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_pi_event_parser_properties)
 (modules test_pi_event_parser_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_session_id_properties)
 (modules test_session_id_properties)
 (libraries onton qcheck-core))

(test
 (name test_resolved_config_properties)
 (modules test_resolved_config_properties)
 (libraries onton onton_core qcheck-core))

(test
 (name test_claude_backend_properties)
 (modules test_claude_backend_properties)
 (libraries onton eio eio_main qcheck-core))

(test
 (name test_runtime_logging_properties)
 (modules test_runtime_logging_properties)
 (libraries onton onton_core qcheck-core))

(test
 (name test_rebase_state_machine)
 (modules test_rebase_state_machine)
 (libraries onton_core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_backend_parser_totality)
 (modules test_backend_parser_totality)
 (libraries onton_core qcheck-core qcheck-core.runner yojson)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_review_service_properties)
 (modules test_review_service_properties)
 (libraries onton_core qcheck-core qcheck-core.runner yojson)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_activity_log_properties)
 (modules test_activity_log_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_display_status_properties)
 (modules test_display_status_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_properties)
 (modules test_properties)
 (libraries onton onton_core onton_test_support qcheck-core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_reconciler_properties)
 (modules test_reconciler_properties)
 (libraries onton_core onton_test_support qcheck-core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_orchestrator_properties)
 (modules test_orchestrator_properties)
 (libraries onton onton_core onton_test_support qcheck-core))

(test
 (name test_state_machine_properties)
 (modules test_state_machine_properties)
 (libraries onton onton_core onton_test_support qcheck-core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_tui_input)
 (modules test_tui_input)
 (libraries onton_core qcheck-core))

(test
 (name test_session_meta_state_properties)
 (modules test_session_meta_state_properties)
 (libraries onton_core qcheck-core))

(test
 (name test_tui_render_frame)
 (modules test_tui_render_frame)
 (libraries onton onton_core base qcheck-core cmarkit))

(test
 (name test_intervention_reason)
 (modules test_intervention_reason)
 (libraries onton onton_core qcheck-core))

(test
 (name test_stream_parser)
 (modules test_stream_parser)
 (libraries onton onton_core qcheck-core))

(test
 (name test_git_env)
 (modules test_git_env)
 (libraries onton onton_core qcheck-core unix)
 (ocamlopt_flags (:standard -w -40-42-4))
 (ocamlc_flags (:standard -w -40-42-4)))

(test
 (name test_persistence_properties)
 (modules test_persistence_properties)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner yojson)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_runtime_create)
 (modules test_runtime_create)
 (libraries onton onton_core))

(test
 (name test_poller_properties)
 (modules test_poller_properties)
 (libraries onton_core onton_test_support qcheck-core))

(test
 (name test_poll_cycle_properties)
 (modules test_poll_cycle_properties)
 (libraries onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_tui_scheduling)
 (modules test_tui_scheduling)
 (libraries onton onton_core eio eio_main eio.unix unix))

(test
 (name test_patch_decision)
 (modules test_patch_decision)
 (libraries onton_core qcheck-core)
 (ocamlopt_flags (:standard -w -40-42-4))
 (ocamlc_flags (:standard -w -40-42-4)))

(test
 (name test_worktree_plan)
 (modules test_worktree_plan)
 (libraries onton_core qcheck-core))

(test
 (name test_worktree_spawn_retry)
 (modules test_worktree_spawn_retry)
 (libraries onton onton_core eio eio_main eio.unix unix))

(test
 (name test_spawn_logic)
 (modules test_spawn_logic)
 (libraries onton onton_core onton_test_support qcheck-core))

(test
 (name test_worktree_parser)
 (modules test_worktree_parser)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_rebase_onto)
 (modules test_rebase_onto)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner eio
   eio_main eio.unix)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_worktree_missing_recovery)
 (modules test_worktree_missing_recovery)
 (libraries onton onton_core eio eio_main eio.unix unix)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_worktree_start_point_integration)
 (modules test_worktree_start_point_integration)
 (libraries onton onton_core onton_test_support eio eio_main eio.unix unix)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_worktree_setup_base_fetch_integration)
 (modules test_worktree_setup_base_fetch_integration)
 (libraries onton onton_core onton_test_support eio eio_main eio.unix unix)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_push_plan_integration)
 (modules test_push_plan_integration)
 (libraries onton onton_core onton_test_support eio eio_main eio.unix unix
   qcheck-core)
 (ocamlopt_flags (:standard -w -40-42-4))
 (ocamlc_flags (:standard -w -40-42-4)))

(test
 (name test_backend_routing)
 (modules test_backend_routing)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_run_classification)
 (modules test_run_classification)
 (libraries onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_failure_subkind_properties)
 (modules test_failure_subkind_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_prune_decision_properties)
 (modules test_prune_decision_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_patch_pr_status_properties)
 (modules test_patch_pr_status_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_rediscover_decision_properties)
 (modules test_rediscover_decision_properties)
 (libraries onton_core qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_patch_controller)
 (modules test_patch_controller)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_patch_controller_state_machine)
 (modules test_patch_controller_state_machine)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_poll_log_properties)
 (modules test_poll_log_properties)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_interleaving_properties)
 (modules test_interleaving_properties)
 (libraries onton onton_core onton_test_support qcheck-core)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_stale_base_invariants)
 (modules test_stale_base_invariants)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_fanin_liveness_interleavings)
 (modules test_fanin_liveness_interleavings)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_misc_pure_properties)
 (modules test_misc_pure_properties)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_prompt_recovery)
 (modules test_prompt_recovery)
 (libraries onton onton_core))

(test
 (name test_conflict_recovery_state_machine)
 (modules test_conflict_recovery_state_machine)
 (libraries onton onton_core onton_test_support qcheck-core qcheck-core.runner)
 (ocamlopt_flags (:standard -w -40-42))
 (ocamlc_flags (:standard -w -40-42)))

(test
 (name test_action_outcome_properties)
 (modules test_action_outcome_properties)
 (libraries onton onton_core onton_test_support qcheck-core))

(test
 (name test_backend_smoke)
 (modules test_backend_smoke)
 (libraries onton onton_core eio eio_main qcheck-core)
 (deps (package onton))
 (action
  (setenv ONTON_SETSID_EXEC
   %{bin:onton-setsid-exec}
   (run %{test}))))

(test
 (name test_user_config)
 (modules test_user_config)
 (libraries onton onton_core eio eio_main eio.unix unix))

(test
 (name test_repo_root)
 (modules test_repo_root)
 (libraries onton onton_core onton_test_support unix))

(test
 (name test_project_lock)
 (modules test_project_lock)
 (libraries onton onton_core unix))

(test
 (name test_rlimit)
 (modules test_rlimit)
 (libraries onton onton_core qcheck-core))

(test
 (name test_telemetry_migration)
 (modules test_telemetry_migration)
 (libraries onton onton_core unix))

(test
 (name test_session_driver_telemetry)
 (modules test_session_driver_telemetry)
 (libraries onton onton_core unix))

(test
 (name test_debug_upload)
 (modules test_debug_upload)
 (libraries onton onton_core qcheck-core unix))

(test
 (name test_dependency_injection_functors)
 (modules test_dependency_injection_functors)
 (libraries onton onton_core eio))
